# rust-authentication-microservice

./: Cargo.toml  Dockerfile  LICENSE  README.md  skaffold.yaml
kubernetes/: dev-deployment.yaml
migrations/: schema.sql
proto/: auth.proto
server/: .env  Cargo.toml  build.rs
server/migrations/: schema.sql
server/src/: database.rs  error.rs  hashing.rs  main.rs  repository.rs  server.rs  token.rs
server/src/account/: database.rs  mod.rs  model.rs
server/src/database/: mod.rs  postgres.rs
server/src/identity/: database.rs  mod.rs  model.rs
server/src/jwt/: generate.rs  mod.rs  model.rs
server/src/refresh_token/: database.rs  mod.rs  model.rs
tests/: Cargo.toml
